---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: same_names.md - Identical display names error messages - Nested class with identical names
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/same_names.md
---

# Python source files

## mdtest_snippet.py

```
1 | class A:
2 |     class B:
3 |         pass
4 | 
5 | class C:
6 |     class B:
7 |         pass
8 | 
9 | a: A.B = C.B()  # error: [invalid-assignment] "Object of type `mdtest_snippet.C.B` is not assignable to `mdtest_snippet.A.B`"
```

# Diagnostics

```
error[invalid-assignment]: Object of type `mdtest_snippet.C.B` is not assignable to `mdtest_snippet.A.B`
 --> src/mdtest_snippet.py:9:1
  |
7 |         pass
8 |
9 | a: A.B = C.B()  # error: [invalid-assignment] "Object of type `mdtest_snippet.C.B` is not assignable to `mdtest_snippet.A.B`"
  | ^
  |
info: rule `invalid-assignment` is enabled by default

```
